partially fixed jumping images, fixed scroll

--- a/src/sass/partials/_message.scss
+++ b/src/sass/partials/_message.scss
@@ -572,6 +572,7 @@
                 padding: 5px 9px;
 
                 .text-wrapper {
+                    word-break: break-word;
                     user-select: text;
                 }
 
